--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@ h1 {
 <p>The App may display personalized ads depending on user consent and region.</p>
 <p>For users in the European Economic Area (EEA), United Kingdom, and Switzerland, we use Google’s User Messaging Platform (UMP) to obtain consent before serving personalized ads, as required under GDPR and related regulations.</p>
 <p>Users may change their ad preferences through device settings or Google Ads settings.</p>
+<p>
+    Users may change or revoke their ad consent at any time by going to:
+    <strong>More → Change Ad Consent</strong> within the app.
+</p>
 </div>
 
 <div class="section">
